<resources>
    <string name="app_name">MemoriesApplication</string>
    <string name="action_settings">Settings</string>
    <string name="action_camera">Camera</string>
    <string name="login_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">LogIn</string>
    <string name="create_account_button_text">Create an Account</string>
    <string name="create_password_2">Re-Enter Password</string>
    <string name="create_password">Password</string>
    <string name="create_account_fname_hint">First Name</string>
    <string name="create_account_lname_hint">Last Name</string>
    <string name="post_count_text">Posts</string>
    <string name="help_center">Help Center</string>
    <string name="faq">FAQ</string>
    <string name="search_hint">City or State</string>
<<<<<<< Updated upstream
    <string name="captured_media_submit_button">Submit</string>
=======
    <string name="edit_profile">Edit Profile</string>
    <string name="can_you_use_video_on_this_app">Can you use video on this app?</string>
    <string name="the_video_feature_is_not_yet_implemented_stay_tune_for_updates">The video feature is not yet implemented. Stay tune for updates.</string>
    <string name="what_class_is_this_for">What class is this for?</string>
    <string name="cecs_453">CECS 453</string>
    <string name="is_there_an_ios_app_for_this">Is there an IOS app for this ?</string>
    <string name="no_currently_it_is_is_still_in_progreess">No.Currently it is is still in progreess.</string>
    <string-array name="Languages">
        <item>English(default)</item>
        <item>French</item>
        <item>Chinese</item>
        <item>Spanish</item>
        <item>Arabic</item>
    </string-array>

>>>>>>> Stashed changes
</resources>
