<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/quest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/faq"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewques2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewques7"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:text="@string/can_you_use_video_on_this_app" />

    <TextView
        android:id="@+id/textViewques3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textViewques2"
        android:layout_marginTop="60dp"
        android:text="@string/the_video_feature_is_not_yet_implemented_stay_tune_for_updates" />

    <TextView
        android:id="@+id/textViewques4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/quest"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:text="@string/what_class_is_this_for" />

    <TextView
        android:id="@+id/textViewques5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewques4"
        android:layout_marginTop="40dp"
        android:text="@string/cecs_453" />

    <TextView
        android:id="@+id/textViewques6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewques5"
        android:layout_marginTop="40dp"
        android:text="@string/is_there_an_ios_app_for_this" />

    <TextView
        android:id="@+id/textViewques7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewques6"
        android:layout_marginTop="40dp"
        android:text="@string/no_currently_it_is_is_still_in_progreess" />

    <!-- <ListView
          android:id="@+id/list"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/textView3"
          android:layout_marginTop="30dp"
          android:layout_centerHorizontal="true">
      </ListView>-->
</RelativeLayout>