<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.csulb.memoriesapplication.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/background_color">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:src="@drawable/memorieslogo" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:srcCompat="@drawable/appname" />


    <EditText
        android:id="@+id/user_email_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/login_hint"
        android:textSize="18dp"
        android:layout_marginTop="5dp"/>
    <EditText
        android:id="@+id/user_password_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password_hint"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/login_button_text"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:background="@drawable/button_border"
        />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/create_account_button_text"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:background="@drawable/button_border"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        />

</LinearLayout>
